Closed Bug 12864 Opened 25 years ago Closed 25 years ago

Z-index not working on relatively positioned elements

Categories

(Core :: Layout, defect, P3)

x86
Windows 98
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: karl, Assigned: troy)

References

()

Details

Attachments

(1 file)

Z-index doesn't seem to work on relatively positioned elements.

In [Attachment], the H1 heading is positioned *below* the following paragraph. It should be above it.
Attached file Simple testcase
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Fixed. We were only paying attention to z-index for absolutely positioned
elements, so I changed the code to respect them for relatively positioned
elements as well
QA Contact: petersen → chrisd
Status: RESOLVED → VERIFIED
Using 10/27 Apprunner, verified fixed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: