Fix for bug #12864. Changed CreateViewForFrame() so it respects the z-index of relatively positioned elements